shelfShare/app/globals.css
/* app/global.css */
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #5a7463;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

.bg-custom-green {
  background-color: #5a7463;
}

.text-custom-tan {
  color: #DFDDCE;
}

.text-custom-brown {
  color: #3D2F2A;
}

.nav-link {
  color: #DFDDCE;
  font-size: 1rem;
  font-weight: 500;
  padding: 0.5rem 1rem;
  transition: color 0.2s ease-in-out;
}

.nav-link:hover {
  color: #3D2F2A;
}

.navbar-container {
  display: flex;
  justify-content: space-between; /* Pushes logo left, everything else right */
  margin: 0 auto;
  padding: 1rem 1.5rem;
}

.logo-container {
  flex-shrink: 0; /* Prevents logo from resizing */
  align-items: left;
}

.nav-items {
  display: flex;
  align-items: right;
  gap: 1.5rem; /* Space between search and nav links */
  padding: 2.25rem 1.5rem;
}

.search-bar {
  width: 20rem; 
  height: 2rem;
  padding: 0.5rem 1rem; 
  border-radius: 0.5rem; 
  background-color: rgba(255, 255, 255, 0.9);
  color: #3D2F2A;
  font-size: 1rem;
  border: 1px solid #ccc; 
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
}

.dropdown-menu {
  position: absolute;
  right: 0;
  top: 100%;
  background-color: #5a7463;
  /* border: 1px solid #5a7463;
  border-radius: 0.5rem;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
  width: 10rem;
  display: flex;
  flex-direction: column;
  z-index: 100;
}

.dropdown-item {
  padding: 0.75rem 1rem;
  color: #DFDDCE;
  text-decoration: none;
  transition: background-color 0.2s ease-in-out;
}

.dropdown-item:hover {
  background-color: #f5f5f5;
}

